fixing instructions text

--- a/Index.html
+++ b/Index.html
@@ -68,8 +68,8 @@
                   <li>Feel free to use any frontend technology (CSS and JS frameworks, task managers and optmization tool)</li>
                   <li>Consider this as a piece of work that will be tested and deplyed to production.</li>
                   <li>You can continue using this page and chagne as necessary or create a complete new one, its entirely up to you.</li>
-                  <li>Lastly, this is not only a coding test but we want to see how you aproach your development, code stayle, git approach and etc.</li>
                   <li>When you are ready, please send back a git patch attached containing commits (not just working files) and do NOT fork the repo. </li>
+                  <li>Lastly, this is not only a coding test but we want to see how you aproach your development, code style, git etc. That is the opportunity to show your skils.</li>
                   
                 </ul>
             </li>
