--- a/Index.html
+++ b/Index.html
@@ -32,39 +32,39 @@
 
         <div class="settemplate">
           <h1>Stats Page Test</h1>
-          <p>This is your challenge, to connect to given API and display the data returned based on user interaction.</p>
+          <p>This is your challenge; to connect to the given API and display the data returned based on user interaction.</p>
         </div>
         <div>
           <ul>
             <li>
-              Please have a look at this experimental Rest API endpoints: <br><br>
+              Please have a look at these experimental Rest API endpoints: <br><br>
               <span>1) http://semikolsf1.azurewebsites.net/api/Season/getraces/2016</span> <br>
               <span>2) http://semikolsf1.azurewebsites.net/api/Season/getdriverstandings/2016</span><br><br>
             </li>
             <li>
-              The first one will return a list of races per season and the second one the divers standing for the given season. The season
+              The first one will return a list of races per season and the second one the drivers standing for the given season. The season
               (year) is your parameter.
             </li>
             <li>
               Your task is to:
               <ul>
                 <li>Clone this repository (Don't fork it and don't commit to it!) </li>
-                <li>Create an one page website to display F1 data from API's </li>
-                <li>Display a list of seasons from 1950 to 2017 which the user can select one season only.</li>
-                <li>Based on user selection, retrieve and display race and standings data from the API</li>
+                <li>Create a one page website to display F1 data from the API's </li>
+                <li>Display a list of seasons from 1950 to 2017 from which the user can select one season only.</li>
+                <li>Based on user selection; retrieve and display race and standings data from the API</li>
               </ul>
             </li>
             <li>
               Considerations:
               <ul>
                 <li>Feel free to use any frontend technology (CSS and JS frameworks, task managers and optimization tools)</li>
-                <li>Consider this as a piece of work that will be tested and deployed to production.</li>
-                <li>You can continue using this page and change as necessary or create a complete new one, its entirely up to
+                <li>Consider this a piece of work that will be tested and deployed to production.</li>
+                <li>You can continue using this page and change as necessary, or create a complete new one, its entirely up to
                   you.</li>
-                <li>When you are ready, please send back a git patch attached containing commits (not just working files) and
+                <li>When you are ready, please send back a git patch attached containing commits (not just working files), and
                   do NOT fork the repo. </li>
-                <li>Lastly, this is not only a coding test but we want to see how you approach your development, code style,
-                  git etc. That is the opportunity to show your skills.</li>
+                <li>Lastly, this is not only a coding test; but we want to see how you approach your development, your code style,
+                  how you use git etc. This is your opportunity to show your skills.</li>
 
               </ul>
             </li>
